testsuite/tests/checks/blocks/test.out
blocks.adb:6:7: error: block statement
6 |       declare
  |       ^^^^ 

